# harbor

./: .gitignore  MULTI_ROUND_TEST_SUMMARY.md  README.md  run_all_kimi_tests.sh  run_comprehensive_tests.sh
examples/tasks/: README.md  kimi_client.py
examples/tasks/bitmap-vector-fix/: TASK.md  instruction.md  run_kimi_eval.sh  task.toml
examples/tasks/bitmap-vector-fix/cpp-files/: CMakeLists.txt  bitmap_manager.h
examples/tasks/bitmap-vector-fix/environment/: Dockerfile
examples/tasks/bitmap-vector-fix/solution/: bitmap_manager_fixed.cpp  solve.sh
examples/tasks/clickhouse-mergetree-debug/: instruction.md  task.toml
examples/tasks/clickhouse-to-doris/: FINAL_REPORT.md  FINAL_RESULTS.md  QUICK_TEST.md  TASK.md  WORK_SUMMARY.md  instruction.md  task.toml
examples/tasks/distributed-chaos-system/: TASK.md  generate_data.py  instruction.md  manual_test.sh  task.toml  test_kimi.py
examples/tasks/harbor-self-optimization/: instruction.md  task.toml
examples/tasks/kafka2clickhouse-debug/: KIMI_DEBUG_REPORT.md  README.md  ReadBufferFromKafkaConsumer.cpp  instruction.md  task.toml
examples/tasks/storage-performance-analysis/: instruction.md  task.toml
examples/tasks/stream-ingest-deadlock/: TASK.md  instruction.md  task.toml
examples/tasks/stream-window-aggregator/: SELF_DIAGNOSIS_TEST.md  TASK.md  instruction.md  instruction_v2.md  run_docker_eval.sh  run_kimi_eval.sh  task.toml
examples/tasks/vector-search-optimization/: KIMI_EVALUATION_REPORT.md  TASK.md  instruction.md  run_docker.sh  run_kimi_test.sh  run_tests.sh  task.toml
(+101 files in other folders)
